Active selection not showing in armature #66747

Closed
opened 2019-07-12 11:10:13 +02:00 by Volodymyr · 9 comments

System Information
Operating system: MacOS Mojave 10.14.5
Graphics card: Intel HD 6000

Blender Version
Broken: (example: 2.80, edbf15d3c0, master, 2018-11-28, as found on the splash screen)

Short description of error
When any bone of armature is selected, it's not shoving which one of selected bones is active.
Bug works with any file

Exact steps for others to reproduce the error

  1. Create armature
  2. Go to edit mode
  3. Duplicate bone
  4. Multiple select bones -- not showing which one is active
    untitled.blend

Screen Shot 2019-07-12 at 12.08.40.png

**System Information** Operating system: MacOS Mojave 10.14.5 Graphics card: Intel HD 6000 **Blender Version** Broken: (example: 2.80, edbf15d3c044, master, 2018-11-28, as found on the splash screen) **Short description of error** When any bone of armature is selected, it's not shoving which one of selected bones is active. Bug works with any file **Exact steps for others to reproduce the error** 1) Create armature 2) Go to edit mode 3) Duplicate bone 4) Multiple select bones -- not showing which one is active [untitled.blend](https://archive.blender.org/developer/F7602147/untitled.blend) ![Screen Shot 2019-07-12 at 12.08.40.png](https://archive.blender.org/developer/F7602149/Screen_Shot_2019-07-12_at_12.08.40.png)
Author

Added subscriber: @linosia

Added subscriber: @linosia

#67522 was marked as duplicate of this issue

#67522 was marked as duplicate of this issue

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Regression since 2.7x, should be fixed for 2.8x.

Regression since 2.7x, should be fixed for 2.8x.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Is this about the (slight) color change in bone wire drawing that we saw in 2.79?
Other than that the HUD (top left) is showing active bone name for me...

Is this about the (slight) color change in bone wire drawing that we saw in 2.79? Other than that the HUD (top left) is showing active bone name for me...

This issue was referenced by f3848e8e1e

This issue was referenced by f3848e8e1e7ca74d43d54bbaf4cfcbb7c7ad132a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-07-12 14:28:08 +02:00

Added subscriber: @P2design

Added subscriber: @P2design
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66747
No description provided.