Fix T66747: Active bone not showing in edit-mode